# setproctitle

./: CMakeLists.txt  README.md
src/: setproctitle.cpp
src/include/: setproctitle.h
src/unit/: CMakeLists.txt  acceptance_test.h
